--- a/.github/workflows/secrets-demo.yml
+++ b/.github/workflows/secrets-demo.yml
@@ -13,5 +13,5 @@ jobs:
           MY_SECRET_VAL: ${{ secrets.MY_SECRET }}
         run:
           echo "Printing secret directly (masked): ${{ secrets.MY_SECRET }}"
-          echo "Printing secret from env (masked): $MY_SECRET_VAL"
+          echo "Printing secret from env (masked): $MY_SECRET"
 
