--- a/.github/workflows/secrets-demo.yml
+++ b/.github/workflows/secrets-demo.yml
@@ -7,11 +7,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-    
+
       - name: Print Secret
         env:
-          MY_SECRET_VAL: ${{ secrets.MY_SECRET }}
-        run:
+          MY_SECRET: ${{ secrets.MY_SECRET }}
+        run: |
           echo "Printing secret directly (masked): ${{ secrets.MY_SECRET }}"
           echo "Printing secret from env (masked): $MY_SECRET"
-
